--- a/css/hero.css
+++ b/css/hero.css
@@ -1,3 +1,6 @@
+/*command + forward slash is a shortcut
+for making css comments*/
+
 body{
 	margin: 0;
 	font-family: Helvetica, Arial, sans-serif;
